--- a/css/ticket.css
+++ b/css/ticket.css
@@ -1,5 +1,5 @@
 body{
-  color: white;
+  color: rgb(255, 255, 255);
   font-family: Cambria;
 
 }
@@ -33,7 +33,7 @@ body{
   bottom: 0;
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.8); 
-  color: #f1f1f1;
+
   width: 100%;
   transition: .5s ease;
   opacity:0;
@@ -114,6 +114,7 @@ body{
 
 .ticket-mlbb-seattable td{
   padding: 20px;
+  color: black;
 }
 
 .ticket-paynow {
@@ -199,6 +200,9 @@ body{
   border-radius:25px;
 }
 
+fieldset.mlbb{
+  text-align: center;
+}
 
 .paymentmethod img{
   padding: 15px;
