--- a/css/style.css
+++ b/css/style.css
@@ -572,6 +572,29 @@ hr {
     border: 1px solid black;
     background-color: rgb(245, 160, 217);
 }
+.correct a{
+    margin-left: 5px;
+    color: white;
+}
+.correct{
+    color: white;
+    background-color: green;
+    margin: 10px 25% 10px 25%;
+    padding: 10px 15px;
+    border-radius: 5px;
+}
+.error a{
+    margin-left: 5px;
+    color: white;
+}
+.error{
+    text-align: left;
+    color: white;
+    background-color: rgb(241, 75, 83);
+    margin: 10px 25% 10px 25%;
+    padding: 10px 15px;
+    border-radius: 5px;
+}
 
 /*End of eventEdit.php styles*/
 
@@ -659,7 +682,7 @@ input[type=hidden] {
 }
 
 .dlt-back-btn {
-    margin-left: 40%;
+    margin-left: 45%;
     margin-top: -5%;
 }
 
@@ -959,7 +982,9 @@ td {
     margin: 10px 35%;
     font-size: 14pt;
 }
-
+.user-manage-btn{
+    width: 80%;
+}
 .user-manage-btn td {
     text-align: center;
 }
@@ -969,15 +994,18 @@ td {
 }
 
 #chg-pw-btn {
+    margin-left: -50px;
+}
+#fgt-pw-btn{
     margin-left: 25px;
 }
 #logout-btn{
-    margin-left: -50px;
+    margin-left: 25px;
 }
 
 .user-manage-btn button {
-    margin-top: 30px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
     font-size: 12pt;
     font-family: cambria;
     letter-spacing: .1em;
@@ -1002,6 +1030,22 @@ td {
     width: 30%;
     margin: 10px 35%;
     font-size: 14pt;
+}
+.user-info-edit-table td input{
+    width: 140%;
+    margin-left: -20px;
+}
+.add-profile-pic input{
+    width: 140%;
+}
+
+#add-pro-pic-btn{
+    margin-left: 50%;
+    width: 140%;
+    font-size: 12pt;
+    font-family: cambria;
+    letter-spacing: .1em;
+    margin-top: -100px;
 }
 
 #user-manage-reset,
@@ -1033,3 +1077,20 @@ td {
     font-size: 12pt;
 }
 /*End of userAcc-edit.php styles*/
+/*Start of userAcc-fgt-pw.php styles*/
+/*End of userAcc-fgt-pw.php styles*/
+.user-info-fgtpw-table{
+    width: 30%;
+    margin: 10px 38%;
+    font-size: 14pt;
+}
+.user-info-fgtpw-table input{
+    font-family: cambria;
+    letter-spacing: .1em;
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    margin: 10px 0;
+    font-size: 12pt;
+}
