--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,59 @@ body {
 }
 
 /*End of footer styles*/
+/*Start of helpdeskAdmin.php styles*/
+.helpdeskAdmin-header h1{
+    text-align: center;
+    padding-bottom: 10px;
+}
+.helpdesk-view-table{
+    margin-left: 10%;
+    text-align: center;
+    width: 80%;
+    border-collapse: collapse;
+}
+.helpdesk-view-table td{
+    padding-top: 30px;
+    border: 1px solid white;
+}
+.help-id{
+    width: 15%;
+}
+.help-time{
+    width: 20%;
+}
+.help-time2{
+    width: 30%;
+}
+.content{
+    width: 30%;
+}
+.content2{
+    width: 40%;
+}
+.helpdesk-view-table a{
+    text-decoration: none;
+    color: black;
+    font-family: cambria;
+    letter-spacing: .1em;
+    font-weight: bold;
+}
+.helpdesk-view-table button{
+    float: right;
+    width: 70px;
+    margin: 10px 0;
+    padding: 7px 2px;
+    border: 1px solid black;
+    border-radius: 10px;
+    transition: all 0.2s ease;
+}
+.helpdesk-view-table button:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    border: 1px solid black;
+    background-color: rgb(181, 246, 248);
+}
+/*End of helpdeskAdmin.php styles*/
 
 /*Start of helpdeskUser.php styles*/
 .helpUser-header {
@@ -285,6 +338,7 @@ body {
     background-color: rgba(255, 255, 255, 0.89);
     margin: 10px 35% 10px 35%;
     padding: 10px;
+    padding-top: 30px;
     border-radius: 10px;
 }
 
@@ -297,6 +351,8 @@ body {
     font-size: 16px;
     background-color: white;
     padding: 12px 20px 12px 10px;
+    font-family: cambria;
+    letter-spacing: .1em;
     margin-bottom: 10px;
 }
 
@@ -312,27 +368,39 @@ body {
 }
 
 .helpUser-form-btn input {
-    width: 20%;
-    height: 30px;
+    width: 80px;
     border: none;
     border-radius: 4px;
     background-color: #4f6874;
     color: white;
-    font-size: 16px;
-    margin-bottom: 10px;
+    font-family: cambria;
+    letter-spacing: .1em;
+    font-weight: bold;
+    padding: 10px;
+    font-size: 15px;
+    margin: 20px 5px 10px 5px;
+    transition: all .5s ease;
+}
+.helpUser-form-btn input:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    background-color: black;
+    color: white;
 }
 
 .helpUser-form-error {
+    width: 75%;
     color: white;
     background-color: rgb(241, 75, 83);
-    margin: 0 25% 10px 25%;
+    margin: 0 25% 10px 13%;
     padding: 5px 0;
 }
 
 .helpUser-form-success {
+    width: 75%;
     color: white;
     background-color: green;
-    margin: 0 25% 10px 25%;
+    margin: 0 25% 10px 13%;
     padding: 5px 0;
 }
 
