--- a/css/style.css
+++ b/css/style.css
@@ -275,43 +275,52 @@ body {
 
 /*End of footer styles*/
 /*Start of helpdeskAdmin.php styles*/
-.helpdeskAdmin-header h1{
+.helpdeskAdmin-header h1 {
     text-align: center;
     padding-bottom: 10px;
 }
-.helpdesk-view-table{
+
+.helpdesk-view-table {
     margin-left: 10%;
     text-align: center;
     width: 80%;
     border-collapse: collapse;
 }
-.helpdesk-view-table td{
+
+.helpdesk-view-table td {
     padding-top: 30px;
     border: 1px solid white;
 }
-.help-id{
+
+.help-id {
     width: 15%;
 }
-.help-time{
+
+.help-time {
     width: 20%;
 }
-.help-time2{
+
+.help-time2 {
     width: 30%;
 }
-.content{
+
+.content {
     width: 30%;
 }
-.content2{
+
+.content2 {
     width: 40%;
 }
-.helpdesk-view-table a{
+
+.helpdesk-view-table a {
     text-decoration: none;
     color: black;
     font-family: cambria;
     letter-spacing: .1em;
     font-weight: bold;
 }
-.helpdesk-view-table button{
+
+.helpdesk-view-table button {
     float: right;
     width: 70px;
     margin: 10px 0;
@@ -320,13 +329,49 @@ body {
     border-radius: 10px;
     transition: all 0.2s ease;
 }
-.helpdesk-view-table button:hover{
+
+.helpdesk-view-table button:hover {
     cursor: pointer;
     transform: scale(1.1);
     border: 1px solid black;
     background-color: rgb(181, 246, 248);
 }
+
 /*End of helpdeskAdmin.php styles*/
+.fgtpsw-heading {
+    margin: 50px 0;
+    margin-bottom: 70px;
+    text-align: center;
+    letter-spacing: 1.2em;
+    text-transform: uppercase;
+}
+
+.user-fgtpsw-table {
+    width: 40%;
+    margin: auto;
+    font-size: 14pt;
+
+}
+
+.user-fgtpsw-table input {
+    width: 200px;
+    margin-bottom: 30px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    font-family: cambria;
+    letter-spacing: .1em;
+}
+
+.registration-form-error {
+    margin-left: 50%;
+}
+
+.registration-header {
+    margin: 30%;
+    color: white;
+    text-align: center;
+}
 
 /*Start of helpdeskUser.php styles*/
 .helpUser-header {
@@ -336,7 +381,7 @@ body {
 .helpUser-form {
     text-align: center;
     background-color: rgba(255, 255, 255, 0.89);
-    margin: 10px 35% 10px 35%;
+    margin: 10px 35% 60px 35%;
     padding: 10px;
     padding-top: 30px;
     border-radius: 10px;
@@ -381,7 +426,8 @@ body {
     margin: 20px 5px 10px 5px;
     transition: all .5s ease;
 }
-.helpUser-form-btn input:hover{
+
+.helpUser-form-btn input:hover {
     cursor: pointer;
     transform: scale(1.1);
     background-color: black;
@@ -551,7 +597,8 @@ body {
     border-radius: 30px;
     padding: 10px 5px;
 }
-.editEvents-form{
+
+.editEvents-form {
     margin-left: -5%;
     width: 106%;
 }
@@ -640,22 +687,26 @@ hr {
     border: 1px solid black;
     background-color: rgb(245, 160, 217);
 }
-.correct a{
+
+.correct a {
     margin-left: 5px;
     color: white;
 }
-.correct{
+
+.correct {
     color: white;
     background-color: green;
     margin: 10px 25% 10px 25%;
     padding: 10px 15px;
     border-radius: 5px;
 }
-.error a{
+
+.error a {
     margin-left: 5px;
     color: white;
 }
-.error{
+
+.error {
     text-align: left;
     color: white;
     background-color: rgb(241, 75, 83);
@@ -956,6 +1007,7 @@ td {
     color: white;
     border: 1px solid white;
 }
+
 .order-details button {
     width: 60px;
     margin: 10px 0;
@@ -989,11 +1041,13 @@ td {
     margin: auto;
     color: black;
 }
-.editMerch-form-group-rd input{
+
+.editMerch-form-group-rd input {
     margin: 30px 0 50px 0;
     width: 50px;
 }
-.editMerch-form-group input{
+
+.editMerch-form-group input {
     text-align: center;
     width: 250px;
     padding: 10px 5px;
@@ -1005,10 +1059,12 @@ td {
     font-size: 16px;
     font-family: Cambria;
 }
-.edit-form-btn{
+
+.edit-form-btn {
     margin-left: 40px;
 }
-.edit-form-btn input{
+
+.edit-form-btn input {
     font-family: cambria;
     letter-spacing: .1em;
     width: 20%;
@@ -1021,10 +1077,12 @@ td {
     margin: 10px;
     transition: all 0.2s ease;
 }
-#id{
+
+#id {
     border: none;
 }
-.error{
+
+.error {
     text-align: left;
     color: white;
     background-color: rgb(241, 75, 83);
@@ -1037,22 +1095,26 @@ td {
 /*End of editMerch.php styles*/
 
 /*Start of userAcc.php styles*/
-.userAcc-header h1{
+.userAcc-header h1 {
     text-align: center;
 }
+
 .user-image img {
     border: 1px solid white;
     margin: 2% 43%;
 }
 
-.user-info-table, .user-info-pw-table {
+.user-info-table,
+.user-info-pw-table {
     width: 35%;
     margin: 10px 35%;
     font-size: 14pt;
 }
-.user-manage-btn{
+
+.user-manage-btn {
     width: 80%;
 }
+
 .user-manage-btn td {
     text-align: center;
 }
@@ -1064,10 +1126,12 @@ td {
 #chg-pw-btn {
     margin-left: -50px;
 }
-#fgt-pw-btn{
+
+#fgt-pw-btn {
     margin-left: 25px;
 }
-#logout-btn{
+
+#logout-btn {
     margin-left: 25px;
 }
 
@@ -1099,15 +1163,17 @@ td {
     margin: 10px 35%;
     font-size: 14pt;
 }
-.user-info-edit-table td input{
+
+.user-info-edit-table td input {
     width: 140%;
     margin-left: -20px;
 }
-.add-profile-pic input{
+
+.add-profile-pic input {
     width: 140%;
 }
 
-#add-pro-pic-btn{
+#add-pro-pic-btn {
     margin-left: 50%;
     width: 140%;
     font-size: 12pt;
@@ -1134,7 +1200,8 @@ td {
     margin-left: 25px;
 }
 
-.user-info-edit-table input, .user-info-pw-table input {
+.user-info-edit-table input,
+.user-info-pw-table input {
     font-family: cambria;
     letter-spacing: .1em;
     width: 90%;
@@ -1144,15 +1211,17 @@ td {
     margin: 10px 35%;
     font-size: 12pt;
 }
+
 /*End of userAcc-edit.php styles*/
 /*Start of userAcc-fgt-pw.php styles*/
 
-.user-info-fgtpw-table{
+.user-info-fgtpw-table {
     width: 30%;
     margin: 10px 38%;
     font-size: 14pt;
 }
-.user-info-fgtpw-table input{
+
+.user-info-fgtpw-table input {
     font-family: cambria;
     letter-spacing: .1em;
     width: 100%;
@@ -1162,33 +1231,39 @@ td {
     margin: 10px 0;
     font-size: 12pt;
 }
+
 /*End of userAcc-fgt-pw.php styles*/
 /*Start of home.php styles*/
-.event-div{
+.event-div {
     margin-bottom: 47%;
 }
-.home-events{
+
+.home-events {
     display: flexbox;
     justify-content: center;
     align-items: center;
     margin-left: 8%;
 }
-.home-events h2{
+
+.home-events h2 {
     margin-left: -8%;
     text-align: center;
     letter-spacing: .1em;
 }
-.event-box h3{
+
+.event-box h3 {
     text-align: center;
     font-size: 14pt;
 }
-.event-box img{
+
+.event-box img {
     width: 300px;
     height: 400px;
     padding: 10px;
     margin-bottom: 10px;
 }
-.event-box{
+
+.event-box {
     width: 320px;
     height: 450px;
     float: left;
@@ -1197,11 +1272,13 @@ td {
     margin-bottom: 30px;
     transition: all 0.2s ease;
 }
-.event-box img:hover{
+
+.event-box img:hover {
     cursor: pointer;
     opacity: 0.5;
 }
-.home-events-btn{
+
+.home-events-btn {
     margin-left: 100px;
     text-align: center;
     padding: 10px;
@@ -1215,25 +1292,29 @@ td {
     font-size: 12pt;
     margin-bottom: 30px;
 }
-.home-events-btn:hover{
+
+.home-events-btn:hover {
     cursor: pointer;
     background-color: white;
     color: black;
     transform: scale(1.1);
 }
-.home-merch{
+
+.home-merch {
     clear: both;
     display: flexbox;
     justify-content: center;
     align-items: center;
     margin-left: 6%;
 }
-.home-merch h2{
+
+.home-merch h2 {
     margin-left: -6%;
     text-align: center;
     letter-spacing: .1em;
 }
-.merch-box{
+
+.merch-box {
     background-color: white;
     float: left;
     width: 340px;
@@ -1242,48 +1323,57 @@ td {
     margin: 30px;
     margin-bottom: 140px;
 }
-.ranking img:hover{
+
+.ranking img:hover {
     cursor: pointer;
     transform: scale(1.2);
 }
-.merch-box img:hover{
+
+.merch-box img:hover {
     cursor: pointer;
     transform: scale(1.1);
 }
-.merch-box h3{
+
+.merch-box h3 {
     text-align: center;
     color: black;
     background-color: rgb(167, 221, 221);
     margin-top: -20px;
     padding: 20px;
 }
-.merch-box img{
+
+.merch-box img {
     padding-left: -12px;
     width: 320px;
     height: 320px;
     padding: 10px;
     transition: all 0.5s ease;
 }
-.ranking img{
+
+.ranking img {
     position: absolute;
     top: 293%;
     width: 70px;
     height: 77px;
     transition: all 0.5s ease;
 }
-#second{
+
+#second {
     left: 18.5%;
 }
-#first{
+
+#first {
     left: 47.5%;
     width: 80px;
     height: 83px;
 }
-#third{
+
+#third {
     left: 77.5%;
     top: 295%;
 }
-.home-merch-btn{
+
+.home-merch-btn {
     margin-top: 30%;
     margin-left: 95px;
     text-align: center;
@@ -1297,10 +1387,12 @@ td {
     font-weight: bold;
     font-size: 12pt;
 }
-.home-merch-btn:hover{
+
+.home-merch-btn:hover {
     cursor: pointer;
     background-color: white;
     color: black;
     transform: scale(1.1);
 }
+
 /*End of home.php styles*/
