--- a/css/style.css
+++ b/css/style.css
@@ -286,9 +286,11 @@ body {
     width: 80%;
     border-collapse: collapse;
 }
+.helpdesk-view-table th{
+    padding-bottom: 20px;
+}
 
 .helpdesk-view-table td {
-    padding-top: 30px;
     border: 1px solid white;
 }
 
@@ -297,7 +299,7 @@ body {
 }
 
 .help-time {
-    width: 20%;
+    width: 15%;
 }
 
 .help-time2 {
@@ -305,11 +307,35 @@ body {
 }
 
 .content {
-    width: 30%;
+    width: 25%;
 }
 
 .content2 {
     width: 40%;
+}
+#pending-hd {
+    font-size: 18pt;
+    margin-top: 60px;
+    margin-left: 40%;
+    margin-bottom: 60px;
+    border: 1px solid white;
+    width: 19%;
+    text-align: center;
+    height: 30px;
+    border-radius: 30px;
+    padding: 10px 5px;
+}
+#answered-hd {
+    font-size: 18pt;
+    margin-top: 60px;
+    margin-left: 39%;
+    margin-bottom: 60px;
+    border: 1px solid white;
+    height: 30px;
+    width: 21%;
+    text-align: center;
+    border-radius: 30px;
+    padding: 10px 5px;
 }
 
 .helpdesk-view-table a {
@@ -321,7 +347,6 @@ body {
 }
 
 .helpdesk-view-table button {
-    float: right;
     width: 70px;
     margin: 10px 0;
     padding: 7px 2px;
@@ -336,8 +361,66 @@ body {
     border: 1px solid black;
     background-color: rgb(181, 246, 248);
 }
-
 /*End of helpdeskAdmin.php styles*/
+/*Start of helpdeskReply.php styles*/
+.reply-header{
+    text-align: center;
+}
+.reply-form{
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.89);
+    margin: 10px 20% 10px 20%;
+    padding: 25px;
+    border-radius: 20px;
+}
+.reply-form-table{
+    width: 70%;
+    margin-top: 30px;
+    margin-left: 18%;
+}
+.reply-form-table th,td{
+    color: white;
+}
+.reply-form-table th{
+    width: 35%;
+}
+.txtarea-th{
+    vertical-align: top;
+    padding-top: 20px;
+    
+}
+.reply-form-table textarea{
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: white;
+    padding: 12px 20px 12px 10px;
+    margin-bottom: 10px;
+    height: 180px;
+    width: 90%;
+    resize: none;
+}
+.reply-form-btn input{
+    font-family: cambria;
+    letter-spacing: .1em;
+    width: 15%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4f6874;
+    color: white;
+    font-size: 16px;
+    margin: 20px;
+    transition: all 0.2s ease;
+}
+.reply-form-btn input:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    background-color: black;
+    color: white;
+}
+/*End of helpdeskReply.php styles*/
 .fgtpsw-heading {
     margin: 50px 0;
     margin-bottom: 70px;
@@ -576,7 +659,7 @@ body {
 }
 
 /*Start of eventTicketManage.php styles*/
-#with-hd {
+#with-hd{
     font-size: 18pt;
     margin-top: 60px;
     margin-left: 40%;
@@ -729,15 +812,18 @@ hr {
 }
 
 .edit-form-table th {
-    font-size: 14pt;
     vertical-align: top;
+    padding-top: 20px;
+}
+.editevent-id{
+    color: black;
 }
 
 .edit-form-table input {
     min-width: 70%;
     height: 45px;
     padding: 10px;
-    border: 1px solid black;
+    border: none;
     border-radius: 5px;
 }
 
@@ -846,6 +932,9 @@ input[type=hidden] {
 
 .addMerch-form-table {
     margin: auto;
+    color: black;
+}
+.addMerch-form-table label{
     color: black;
 }
 
