--- a/css/ticketbuy.css
+++ b/css/ticketbuy.css
@@ -21,7 +21,7 @@
     border-radius: 5px;
     margin-top: 20px;
     color:black;
-  }x
+  }
   
   .ticket-ticket table {
     margin-bottom: 10px;
